# autofolio

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_RUNTIME.md  BACKLOG-BOARD.md  CLAUDE.md  Dockerfile  MVP_SPEC.md  README.md  agent_runtime.lock.json  agent_runtime.yml  docker-compose.yml  owner-docs.yml  pyproject.toml  pytest.ini  railway.json  requirements-postgres.txt  requirements.txt  run_api.bat  run_frontend.bat  run_streamlit.bat  run_tests.bat  run_ui.bat  tasks.index.json
.claude/: ralph-loop.local.md  settings.json
.codex/: hooks.json
.githooks/: post-merge  pre-commit
.playwright-mcp/: page-2026-06-19T04-23-23-659Z.yml  page-2026-06-19T04-29-18-029Z.yml  page-2026-06-19T04-30-12-798Z.yml  page-2026-06-19T04-30-29-425Z.yml  page-2026-06-19T04-33-49-255Z.yml  page-2026-06-19T04-34-29-839Z.yml  page-2026-06-19T04-35-07-874Z.yml  page-2026-06-19T04-38-58-638Z.yml  page-2026-06-19T04-40-04-202Z.yml  page-2026-06-19T04-41-37-567Z.yml  page-2026-06-21T11-41-51-837Z.yml  page-2026-06-21T11-44-03-444Z.yml  page-2026-06-21T11-50-33-917Z.yml  page-2026-06-21T12-49-53-492Z.yml  page-2026-06-21T12-50-15-225Z.yml  page-2026-06-21T12-51-03-439Z.yml  page-2026-06-21T12-51-29-321Z.yml  page-2026-06-21T12-51-56-612Z.yml
.streamlit/: config.toml  secrets.toml.example
agents/: roles.yml
docs/: AGENT_RUNTIME_EVAL_METRICS.md  AGENT_RUNTIME_INTEGRATION.md  AGENT_RUNTIME_RELATIONSHIP.md  AGENT_TEAMS.md  BACKLOG.md  BROKER-CAPABILITY-PARITY-MATRIX.md  EXTERNAL_APP_API_OWNER_MANUAL.md  KIS_API_SPEC.md  MULTI_ASSET_ROADMAP.md  ORG_PLAN.md  README.md  (+8 more)
(+1390 files in other folders)
